--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,6 @@
 <h1><%= @task.title %></h1>
 <p><%= @task.details %></p>
+
+<%= link_to "Go back to Index", tasks_path %>
+<%= link_to "Edit task", tasks_edit_path(id: @task.id) %>
+<%= link_to "Destroy task", tasks_destroy_path(id: @task.id) %>
